tests/ui/codegen/mir/validation/parse_unknown_instruction.mir
//@compile-flags: --pass none

@module UnknownInstruction

fn @bad() {
  bb0:
    v0 = bogus 0 //~ ERROR: unknown instruction `bogus`
    stop
}
